# vibecell

./: .gitignore  .impeccable.md  .mcp.json  HANGAR.md  README.md  SECURITY.md
.claude/: settings.local.json
.github/workflows/: ci.yml  cli.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_foundation.py  0002_groups.py  0003_secret_refs.py  0004_ship_loop.py  0005_oauth.py  0006_mcp_audit_log.py  0007_billing_passkey_events.py  0008_auto_signals.py  0009_portfolio_intel.py  0010_secret_last_used.py  0011_project_screenshots.py  0012_project_todos.py  0013_env_fingerprint.py  0014_audit_project_slug.py  0015_user_email_verified_at.py  0016_email_change_tokens.py  0017_billing.py  0018_backfill_subscriptions.py  0019_session_dedup.py  0020_session_dedup_aggressive.py  0021_project_primer.py  0022_admin_and_2fa.py  0023_trial_lifecycle.py
backend/app/: main.py
backend/app/api/v1/: activity.py  admin.py  ai.py  auth.py  billing.py  cli.py  connections.py  decisions.py  dev.py  events.py  github_repos.py  groups.py  health.py  ideas.py  integrations.py  launches.py  lifecycle.py  me.py  notes.py  passkey.py  portfolio.py  project_children.py  projects.py  screenshots.py  search.py  secrets.py  sessions.py  ships.py  stack_items.py  status.py  tags.py  todos.py  two_factor.py  workspaces.py
backend/app/core/: admin_auth.py  audit.py  config.py  crypto.py  db.py  deps.py  errors.py  middleware.py  plan_gate_middleware.py  problem.py  rate_limit.py  rate_limit_ai.py  redis.py  session.py  ulid.py
backend/app/dependencies/: __init__.py  plan_gate.py
backend/app/jobs/: commit_sync.py  health_cron.py  oauth_cleanup.py  screenshot_cron.py  trial_lifecycle.py  trial_warnings.py
backend/app/mcp/: audit.py  auth.py  server.py  tools.py
backend/app/mcp/handlers/: read.py  render.py  write.py
backend/app/metrics/: endpoint.py  registry.py
backend/app/models/: __init__.py  auth.py  base.py  billing.py  catalog.py  integration.py  project.py  screenshot.py  secret.py  ship_loop.py  signals.py  todo.py
backend/app/oauth/: consent.py  discovery.py  models.py  schemas.py  server.py  tokens.py
backend/app/schemas/: auth.py  cli.py  decision.py  group.py  idea.py  integration.py  launch.py  lifecycle.py  note.py  project.py  screenshot.py  secret.py  session.py  ship.py  stack_item.py  tag.py  todo.py  user.py  workspace.py
backend/app/services/: access_level.py  account_purge.py  activity.py  ai.py  audit_hint.py  billing.py  catalog.py  cli_pair.py  connections.py  decision_svc.py  email_change.py  enrichment.py  enrichment_apply.py  env_fingerprint.py  events.py  github.py  google_oauth.py  group.py  health_monitor.py  idea_svc.py  integration.py  launch_svc.py  lifecycle_svc.py  login.py  mailer.py  note_svc.py  passkey.py  portfolio_intel.py  presence.py  project.py  project_children.py  screenshot_svc.py  search.py  secret.py  session_svc.py  ship_svc.py  stripe_billing.py  todo_svc.py  totp.py  workspace.py
backend/tests/: _auth_helpers.py  _github_helpers.py  conftest.py  test_audit.py  test_auth_magic_link.py  test_auth_verify.py  test_cli_pair.py  test_config.py  test_crypto.py  test_decisions.py  test_enrichment.py  test_errors.py  test_github_import.py  test_github_oauth.py  test_github_repos.py  test_github_resync.py  test_health_persist.py  test_healthz.py  test_ideas.py  test_launches.py  test_lifecycle.py  test_mailer.py  test_mcp_auth.py  test_mcp_server.py  test_mcp_tools_list.py  test_me.py  test_migration_0001.py  test_models_roundtrip.py  test_notes.py  test_oauth_authorize.py  test_oauth_discovery.py  test_oauth_models.py  test_oauth_register.py  test_oauth_revoke.py  test_oauth_token.py  test_oauth_tokens.py  test_passkey_flow.py  test_phase2_integration.py  test_portfolio_cache.py  test_problem_handler.py  (+31 more)
backend/tests/integration/: test_account_lifecycle.py  test_billing_endpoints.py  test_email_change.py  test_email_verified_at.py  test_full_oauth_mcp_flow.py  test_oauth_full_flow.py  test_subscription_bootstrap.py
backend/tests/test_mcp_tools/: test_run_absent.py
cli/: Cargo.toml  README.md
cli/src/: cloud.rs  config.rs  keychain.rs  main.rs  resolver.rs
cli/src/cache/: mod.rs  models.rs  schema.sql
cli/src/cmd/: daemon.rs  mcp_token.rs  mod.rs  pair.rs  run.rs  secret.rs  skill.rs  status.rs  sync.rs  unpair.rs
cli/src/cmd/daemon/: install.rs  mod.rs  start.rs  status.rs  stop.rs  uninstall.rs
cli/src/daemon/: mcp.rs  mod.rs  tools.rs
cli/tests/: skill_flow.rs
docs/: LAUNCH-CHECKLIST.md  LAUNCH-POSTS.md  deploy.md
docs/connect/: claude-code.md  claude-desktop.md  cursor.md  index.md  windsurf.md  zed.md
docs/runbooks/: backup-restore.md
docs/superpowers/decisions/: 2026-04-25-email-verification-already-implicit.md  2026-04-25-pricing-model-locked.md
docs/superpowers/specs/: 2026-04-18-spec-1-foundation-dashboard-design.md  2026-04-19-spec-3-cli-mcp-skill-design.md  2026-04-20-spec-3-5-remote-mcp-oauth-design.md  2026-04-20-spec-3-6-github-ai-enrichment-design.md  2026-04-20-spec-4-launch-enabler-design.md  2026-04-20-spec-5a-auto-signals-design.md  2026-04-20-spec-5b-portfolio-intel-design.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: edit-context-audit.spec.ts  fixtures.ts  github-import.spec.ts  signup-create-project.spec.ts
frontend/public/: install.ps1  install.sh  llms.txt  robots.txt  sitemap.xml
frontend/public/skill/: SKILL.md
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  connections.ts  index.ts  (+1 more)
ops/: backup.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  issue-cert.sh  restore-drill.sh  stripe-setup.py  stripe-setup.sh
ops/nginx/: hangar.conf  vibecell.dev.conf  vibecell.dev.http-only.conf
ops/postgres/: init.sql
ops/systemd/: hangar-backup.service  hangar-backup.timer
(+164 files in other folders)
