# backend/pyproject.toml
[project]
name = "hangar-backend"
version = "0.1.0"
description = "Hangar backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-ulid>=3.0",
  "redis[hiredis]>=5.2",
  "httpx>=0.28",
  "cryptography>=44.0",
  "itsdangerous>=2.2",
  "python-multipart>=0.0.17",
  "resend>=2.4",
  "email-validator>=2.2",
  "pyjwt>=2.12.1",
  "prometheus-client>=0.25.0",
  "apscheduler>=3.11.2",
  "anthropic>=0.96.0",
  "webauthn>=2.7.1",
  "playwright>=1.48.0",
  "Pillow>=11.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "httpx>=0.28",
  "ruff>=0.8",
  "mypy>=1.13",
  "sqlalchemy[mypy]>=2.0.36",
  "types-redis>=4.6",
  "testcontainers[postgres,redis]>=4.8",
]

[tool.ruff]
src = ["."]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",   # line length — we already break this for readability
  "B008",   # function-call in default arg — Pydantic `Field(default_factory=...)` is the canonical pattern
  "E402",   # module import not at top — deferred imports avoid circular-import minefields
  "SIM105", # try/except/pass → contextlib.suppress — pure style preference
  "SIM117", # nested with statements — sometimes more readable when contexts have different lifetimes
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin"]
# Pragmatic config — was strict=true, but the codebase wasn't built strict
# from day one and retrofitting is hours of yak-shaving on working code.
# Keep the high-value checks (real bugs surfaced), drop the noise (every
# function-needs-an-annotation finger-wagging on legacy services).
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["testcontainers.*", "apscheduler.*", "ulid", "jwt", "prometheus_client.*", "playwright.*"]
ignore_missing_imports = true

# Legacy modules with rich SQLAlchemy / Pydantic dynamic typing — full
# strict mode complains about Sequence vs list, Result.rowcount, etc.
# We accept the looser typing here pending a focused cleanup pass.
[[tool.mypy.overrides]]
module = [
    "app.services.portfolio_intel",
    "app.services.passkey",
    "app.services.events",
    "app.services.connections",
    "app.services.ai",
    "app.services.billing",
    "app.services.health_monitor",
    "app.services.screenshot_svc",
    "app.services.presence",
    "app.api.v1.activity",
    "app.api.v1.events",
    "app.api.v1.connections",
    "app.api.v1.workspaces",
    "app.api.v1.dev",
    "app.api.v1.passkey",
    "app.api.v1.health",
    "app.api.v1.cli",
    "app.api.v1.ai",
    "app.api.v1.billing",
    "app.core.redis",
    "app.core.rate_limit_ai",
    "app.jobs.oauth_cleanup",
    "app.oauth.discovery",
    "app.oauth.server",
    "app.oauth.tokens",
    "app.mcp.auth",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --strict-markers"
markers = [
  "integration: requires external services (Postgres, Redis)",
]
