[package]
name = "hangar-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Hangar CLI + daemon + MCP server"
license = "MIT"
repository = "https://github.com/lenny/hangar"

[[bin]]
name = "hangar"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "process", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
anyhow = "1"
thiserror = "2"
dirs = "5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
rpassword = "7"

[dev-dependencies]
mockito = "1.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
